# android_https_proxy_client

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/assets/armeabi-v7a/: crypt_and_hash  dtls_server  mpi_demo  pem2der  rsa_decrypt  rsa_sign_pss
app/src/main/cpp/: dns.c  icmp.c  ip.c  session.c  tcp.c  tls_tunnel.c  tls_tunnel.h  tun2http.c  tun2http.h  udp.c  util.c
app/src/main/java/com/tun2http/app/service/: Tun2HttpVpnService.java
gradle/wrapper/: gradle-wrapper.properties
